Fixed dark mode errores

--- a/src/components/cardBullets/CardBullets.module.sass
+++ b/src/components/cardBullets/CardBullets.module.sass
@@ -1,6 +1,16 @@
 @import ../../../styles/helpers
 @import ../../../styles/colors
 
+.design_system
+    background-color: $ultra-white
+    +dark
+        background-color: $black
+
+.visual_language
+    background-color: $white
+    +dark
+        background-color: $black
+
 .section
     position: relative
     overflow: hidden
